--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "css-parser": "^0.0.6",
+    "express": "^4.18.3",
     "fs": "^0.0.1-security",
+    "install": "^0.13.0",
+    "mongodb": "^6.5.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.71.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
-    "twin.macro": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
