--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "css-parser": "^0.0.6",
-    "express": "^4.18.3",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "mongodb": "^6.5.0",
@@ -26,6 +25,7 @@
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.71.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
