--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
     "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -29,6 +30,7 @@
     "sass": "^1.71.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
+    "twin.macro": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
